First update and commit
Initiall creation of Week 4 HTML file and "form" element

--- a/HTML/Week_4/gitRepo.html
+++ b/HTML/Week_4/gitRepo.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            text-align: center;
+        }
+        form{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
+    <!--Make the following-->
+    <!--Form-->
+    <!--Table-->
+    <!--Ordered List-->
+    <!--Image-->
+            <p><h1>GIT REPOSITORY 
+            Week 3</h1></p>
+
+    <!--Form Exercise and Commit-->
+    <form>
+          Name: 
+          <input type="text" ><br><br>
+          Email:
+          <input type="email"><br><br>
+          Address:
+          <input type="address"><br><br>
+          Telephone:
+          <input type="tel"><br><br><br>
+    </form>
+
+    <!--Table Exercise and Commit-->
 </body>
 </html>
