Started "Table" somewhat functional
Created Table.  Began styling.

--- a/HTML/Week_4/gitRepo.html
+++ b/HTML/Week_4/gitRepo.html
@@ -12,6 +12,11 @@
         form{
             text-align: center;
         }
+
+        table, th, td, tr{
+            border: 10px solid;
+            border-color: blue;
+        }
     </style>
 </head>
 <body>
@@ -36,5 +41,14 @@
     </form>
 
     <!--Table Exercise and Commit-->
+
+    <table>
+        <th>HTML5</th><th>CSS3</th><th>JavaScript</th><th>PHP</th><th>PYTHON</th><th>Word Press</th>
+        <tr></tr>
+        <tr></tr>
+        <tr></tr>
+        <tr></tr>
+        <tr></tr>
+    </table>
 </body>
 </html>
