--- a/HTML/Week_4/gitRepo.html
+++ b/HTML/Week_4/gitRepo.html
@@ -14,8 +14,10 @@
         }
 
         table, th, td, tr{
-            border: 10px solid;
+            text-align: center;
+            border: 2px solid;
             border-color: blue;
+            empty-cells: show;
         }
     </style>
 </head>
@@ -44,11 +46,11 @@
 
     <table>
         <th>HTML5</th><th>CSS3</th><th>JavaScript</th><th>PHP</th><th>PYTHON</th><th>Word Press</th>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
+        <tr><td>tags</td><td></td><td></td><td></td><td></td><td></td></tr>
+        <tr><td>labels</td><td></td><td></td><td></td><td></td><td></td></tr>
+        <tr><td>data</td><td></td><td></td><td></td><td></td><td></td></tr>
+        <tr><td>structure</td><td></td><td></td><td></td><td></td><td></td></tr>
+        <tr><td>result</td><td></td><td></td><td></td><td></td><td></td></tr>
     </table>
 </body>
 </html>
