--- a/HTML/Week_4/gitRepo.html
+++ b/HTML/Week_4/gitRepo.html
@@ -13,12 +13,31 @@
             text-align: center;
         }
 
+        div{
+            text-align: center;
+        }
+
         table, th, td, tr{
             text-align: center;
             border: 2px solid;
             border-color: blue;
             empty-cells: show;
+
+            margin-left: auto;
+            margin-right: auto;
         }
+
+        ol{
+            text-align: center;
+            list-style-position: inside;
+        }
+        
+        image{
+            align-content: center;
+        }
+
+
+
     </style>
 </head>
 <body>
@@ -40,17 +59,32 @@
           <input type="address"><br><br>
           Telephone:
           <input type="tel"><br><br><br>
-    </form>
+    </form><br><br>
 
-    <!--Table Exercise and Commit-->
+    <!--Table Exercise and Commit w/first Push-->
+    <div class="table">
+        <table>
+            <th>HTML5</th><th>CSS3</th><th>JavaScript</th><th>PHP</th><th>PYTHON</th><th>Word Press</th>
+            <tr><td>tags</td><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td>labels</td><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td>data</td><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td>structure</td><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td>result</td><td></td><td></td><td></td><td></td><td></td></tr>
+        </table><br><br>
+        </div>
 
-    <table>
-        <th>HTML5</th><th>CSS3</th><th>JavaScript</th><th>PHP</th><th>PYTHON</th><th>Word Press</th>
-        <tr><td>tags</td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td>labels</td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td>data</td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td>structure</td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td>result</td><td></td><td></td><td></td><td></td><td></td></tr>
-    </table>
+    <!--Orderd List and Commit-->
+
+    <ol>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>JavaScript</li>
+        <li>PYTHON</li>
+    </ol><br><br>
+
+    <!--Image Exercis, Commit, and Push-->
+    <div class="Image">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Github-desktop-logo-symbol.svg/2048px-Github-desktop-logo-symbol.svg.png" width="300px" height="300px" alt="GitHub image">
+    </div>
 </body>
 </html>
