CSS Week-1 Practice Exercises.
Completed in-class practice exercises.

--- a/CSS/Week-1/CSS-Background-Property-Practice.html
+++ b/CSS/Week-1/CSS-Background-Property-Practice.html
@@ -8,20 +8,20 @@
       /*Follow the instructions below to modify the background of the body element.*/
       body {
         /*1. Replace the word "value" to change background color to "aqua"*/
-        background-color: value;
+        background-color: aqua;
         /*2. Replace the words "property" and "value" to add background image, set the value to "url("https://images.unsplash.com/photo-1483232539664-d89822fb5d3e")"*/
-        property-image: value;
+        background-image: url("https://images.unsplash.com/photo-1483232539664-d89822fb5d3e");
         /*3. Replace the words "property" and "value" to set the background repeat to "no-repeat"*/
-        background-property: value;
+        background-repeat: no-repeat;
         /*4. Replace the words "property" and "value" to set the background size to "cover"*/
-        property: value;
+        background-size: cover;
         /*5. Replace the words "property" and "value" to set the background attachment to "fixed"*/
-        property: value;
+        background-attachment: fixed;
       }
 
       /*Replace the words "selector", "property" and "value" to add a rule that sets the background color of the <div> element to the value "rgba(255, 255, 255, .7)"*/
-      selector {
-        property: value;
+      div {
+        background-color: "rgba(255, 255, 255, .7)";
       }
 
       /*Leave this as is, it sets the padding around the <h1> and <p> elements to 10px, and increases the font size to 1.6 times the parent value*/
