--- a/CSS/Week-1/CSS-Font-Text-Properties-Practice.html
+++ b/CSS/Week-1/CSS-Font-Text-Properties-Practice.html
@@ -8,70 +8,70 @@
       /*Follow the instructions in the comments below to complete this practice.*/
       #fontFamily {
         /*Add the font family property and set the value to "cursive".*/
-        property: value;
+        font-family: cursive;
       }
 
       #fontSizePX {
         /*Add the font size property and set the value to "16px".*/
-        property: value;
+        font-size: 16px;
       }
 
       #fontSizeEM {
         /*Add the font size property and set the value to "2em".*/
-        property: value;
+        font-size: 2em;
       }
 
       #fontSizePercent {
         /*Add the font size property and set the value to "120%".*/
-        property: value;
+        font-size: 120%;
       }
 
       #fontStyle {
         /*Add the font style property and set the value to "italic".*/
-        property: value;
+        font-style: italic;
       }
 
       #fontWeight {
         /*Add the font weight property and set the value to "bold".*/
-        property: value;
+        font-weight: bold;
       }
 
       #fontColor {
         /*Add the color property and set the value to "orangered".*/
-        property: value;
+        color: orangered;
       }
 
       #fontAlignLeft {
         /*Add the text align property and set the value to "left".*/
-        property: value;
+        text-align: left;
       }
 
       #fontAlignCenter {
         /*Add the text align property and set the value to "center".*/
-        property: value;
+        text-align: center;
       }
 
       #fontAlignRight {
         /*Add the text align property and set the value to "right".*/
-        property: value;
+        text-align: right;
       }
 
       /*Create a rule that selects the <div> elements.*/
-      selector {
+      div {
         /*Add the border property and set the value to "1px solid green".*/
-        property: value;
+        border: 1px solid green;
         /*Add the margin property and set the value to "20px 0px".*/
-        property: value;
+        margin: 20px 0px;
         /*Add the padding property and set the value to "10px".*/
-        property: value;
+        padding: 10px;
       }
 
       /*Create a rule that selects the <p> elements.*/
-      selector {
+      p {
         /*Add the padding left property and set the value to "20px".*/
-        property: value;
+        padding-left: 20px;
         /*Add the border property and set the value to "1px dashed orange".*/
-        property: value;
+        border: 1px dashed orange;
       }
     </style>
   </head>
