--- a/CSS/Week-1/CSS-Padding-Margin-Practice-Practice.html
+++ b/CSS/Week-1/CSS-Padding-Margin-Practice-Practice.html
@@ -8,33 +8,33 @@
       /*Add the padding top, right, bottom, and left properties. Also add a border and background color to see the effects of adding padding.*/
       .padding {
         /*1. Add the padding top property and set the value to "50px".*/
-        property: value;
+       padding-top: 50px;
         /*2. Add the padding right property and set the value to "20px".*/
-        property: value;
+        padding-right: 20px;
         /*3. Add the padding bottom property and set the value to "80px".*/
-        property: value;
+        padding-bottom: 80px;
         /*4. Add the padding left property and set the value to "50px".*/
-        property: value;
+        padding-left: 50px;
         /*5. Add the border property and set the value to "2px solid black".*/
-        property: value;
+        border: 2px solid black;
         /*6. Add the background color property and set the value to "lightblue".*/
-        property: value;
+        background-color: lightblue;
       }
 
       /*Add the margin top, right, bottom, and left properties. Also add a border and background color to see the effects of adding padding.*/
       .margin {
         /*1. Add the margin top property and set the value to "100px".*/
-        property: value;
+        margin-top: 100px;
         /*2. Add the margin right property and set the value to "180px".*/
-        property: value;
+        margin-right: 180px;
         /*3. Add the margin bottom property and set the value to "80px".*/
-        property: value;
+        margin-bottom: 80px;
         /*4. Add the margin left property and set the value to "150px".*/
-        property: value;
+        margin-left: 150px;
         /*5. Add the border property and set the value to "2px solid black".*/
-        property: value;
+        border: 2px solid black;
         /*6. Add the background color property and set the value to "lightcoral".*/
-        property: value;
+        background-color: lightcoral;
       }
     </style>
   </head>
