--- a/CSS/Week-1/CSS-Shorthand-Properties-Practice.html
+++ b/CSS/Week-1/CSS-Shorthand-Properties-Practice.html
@@ -8,18 +8,18 @@
       /*Follow the instructions in the comments below to complete the practice.*/
       .border {
         /*1. Add the border property and set the value to "5px solid".*/
-        property: value;
+        border: 5px solid;
         /*2. Add the border color and set the value to "orange red green blue".*/
-        property: value;
+        background-color: orange red green blue;
       }
       .padding {
         /*Add the padding property and set the value to "10px 20px 10px 20px".*/
-        property: value;
+        padding: 10px 20px 10px 20px;
       }
 
       .margin {
         /*Add the margin property and set the value to "20px 50px 10px 25px".*/
-        property: value;
+        margin: 20px 50px 10px 25px;
       }
     </style>
   </head>
