--- a/CSS/Week-1/Style_Location_Practice/CSS-Style-External-Practice.html
+++ b/CSS/Week-1/Style_Location_Practice/CSS-Style-External-Practice.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS External Style Sheet Practice</title>
     <!--INSTRUCTIONS: Add the <link> element to link to the external style.css style sheet.-->
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
