--- a/CSS/Week-1/CSS-Comments-Practice.html
+++ b/CSS/Week-1/CSS-Comments-Practice.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adding Comments in CSS Practice</title>
     <style>
-      Make this is a comment.
+      /*Make this is a comment.*/
       h1 {
           font-family: cursive;
       }
 
-      Replace this with your own comment.
+      /* Replace this with your own comment. */
       p {
           font-family: sans-serif;
       }
 
-      Make this
+      /* Make this
       multi-line sentence
-      a comment
+      a comment */
     </style>
   </head>
 
