--- a/CSS/Week-1/CSS-Height-Width-Practice.html
+++ b/CSS/Week-1/CSS-Height-Width-Practice.html
@@ -8,53 +8,53 @@
       /*Follow the instructions in the comments below to complete the practice.*/
       .height {
         /*1. Add the height property and set the value to "50px".*/
-        property: value;
+        height: 50px;
         /*2. Add the border property and set the value to "2px solid black".*/
-        property: value;
+        border: 2px solid black;
         /*3. Add the background color property and set the value to "lightcyan".*/
-        property: value;
+        background-color: lightcyan;
       }
 
       .width {
         /*1. Add the width property and set the value to "150px".*/
-        property: value;
+        width: 150px;
         /*2. Add the border property and set the value to "2px solid black".*/
-        property: value;
+        border: 2px solid black;
         /*3. Add the background color property and set the value to "lightpink".*/
-        property: value;
+        background-color: lightpink;
       }
 
       .heightWidth {
         /*1. Add the height property and set the value to "50px".*/
-        property: value;
+        height: 50px;
         /*2. Add the width property and set the value to "25%".*/
-        property: value;
+        width: 25%;
         /*3. Add the border property and set the value to "2px solid black".*/
-        property: value;
+        border: 2px solid black;
         /*4. Add the background color property and set the value to "lightgreen".*/
-        property: value;
+        background-color: lightgreen;
       }
 
       .maxMinWidth {
         /*1. Add the max width property and set the value to "800px".*/
-        property: value;
+        max-width: 800px;
         /*2. Add the min width property and set the value to "600px".*/
-        property: value;
+        min-width: 600px;
         /*3. Add the border property and set the value to "2px solid black".*/
-        property: value;
+        border: 2px solid black;
         /*4. Add the background color property and set the value to "lightblue".*/
-        property: value;
+        background-color: lightblue;
       }
 
       .maxMinHeight {
         /*1. Add the max height property and set the value to "50px".*/
-        property: value;
+        max-height: 50px;
         /*2. Add the min height property and set the value to "30px".*/
-        property: value;
+        min-height: 30px;
         /*3. Add the border property and set the value to "2px solid black".*/
-        property: value;
+        border: 2px solid black;
         /*4. Add the background color property and set the value to "lightcoral".*/
-        property: value;
+        background-color: lightcoral;
       }
     </style>
   </head>
