--- a/CSS/Week-1/CSS-Selectors-Practice.html
+++ b/CSS/Week-1/CSS-Selectors-Practice.html
@@ -7,47 +7,47 @@
     <title>CSS Selectors Practice</title>
     <style>
         /*INSTRUCTIONS: Add the selector that selects the heading one element.*/
-        selector {
+        h1 {
             color: red;
         }
 
         /*INSTRUCTIONS: Add the selector that selects the paragraph elements.*/
-        selector {
+        p {
             color: purple;
         }
 
         /*INSTRUCTIONS: Add the selector that selects the paragraph and heading one elements.*/
-        selector(s) {
+        p h1 {
             background-color: lightcyan;
             padding: 10px;
             width: 75%;
         }
 
         /*INSTRUCTIONS: Add the selector that selects the elements with the "bold" class.*/
-        selector {
+        .bold {
             font-weight: bold;
         }
 
         /*INSTRUCTIONS: Add the selector that selects the elements with the "special" class.*/
-        selector {
+        .special {
             font-style: italic;
             font-weight: bold;
             color: orange;
         }
 
         /*INSTRUCTIONS: Add the selector that selects the elements with the id "announcement"*/
-        selector {
+        #announcement {
             font-size: xx-large;
             color: maroon;
         }
 
         /*INSTRUCTIONS: Add the selector that selects the elements with the "green" class.*/
-        selector {
+        .green {
             color: green;
         }
 
         /*INSTRUCTIONS: Add the selector that selects only the paragraph elements with the "green" class.*/
-        selector {
+        p.green {
             font-style: italic;
         }
     </style>
