--- a/CSS/Week-1/Style_Location_Practice/CSS-Style-Internal-Practice.html
+++ b/CSS/Week-1/Style_Location_Practice/CSS-Style-Internal-Practice.html
@@ -7,6 +7,10 @@
     <!--INSTRUCTIONS: Add the <style> element and create two CSS rules:
         1. h1 {color: green;}
         2. p {color: blue;}-->
+        <style>
+            h1 {color: green;}
+            p {color: blue;}
+        </style>
   </head>
 
   <body>
